--- a/views/common/_life.pug
+++ b/views/common/_life.pug
@@ -4,8 +4,10 @@ section.life
     - var br = "<br/>"
     .life__slogan У музыки нет возраста и нации, !{br} однажды мы уйдём, а она останется.
     ul.life__skills
-      each item in skills
+
+
+      each item, indx in info
         li.life__skill
-          .life__skill-number= item.number
-          .life__skill-text= item.text
+          .life__skill-number= skills[indx]
+          .life__skill-text= item
     a(href="http://").life__link Читать историю
