--- a/views/pages/admin.pug
+++ b/views/pages/admin.pug
@@ -30,10 +30,10 @@ block content
               input(name="years" type="number" value=`${skills.years}`).form-skill__input
             .form__btns.form-skill__input-line
               button(type="submit").button Сохранить
-          form.form-upload(action='/admin/upload' method="POST" enctype="application/x-www-form-urlencoded")
+          form.form-upload(action='/admin/upload' method="POST" enctype="multipart/form-data")
             .form-title Добавить товар
             if (msgfile)
-              .status= msgfile
+              .status #{msgfile}
             .form-upload__input-line
               .form-upload__wraper
                 label.form-upload__label
