--- a/views/pages/login.pug
+++ b/views/pages/login.pug
@@ -17,8 +17,10 @@ block content
                   i(class=`fab ${item}`)
 
       form(action="/login" method="POST").form-login
-        if (msgslogin)
+        if (msgslogin.length>0)
           .status #{msgslogin}
+        //if (msgslogin)
+        //  .status #{msgslogin}
         .form-login__line
           label.form-login__label(for="") Привет,
           input.form-login__input(type="email" name="email" placeholder="E-MAIL")
