--- a/views/pages/admin.pug
+++ b/views/pages/admin.pug
@@ -14,8 +14,8 @@ block content
         .form-container
           form.form-skill(action='/admin/skills' method="POST")
             .form-title Счетчики
-            if (msgskill)
-              .status= msgskill
+            if (msgskill.length>0)
+              .status #{msgskill}
             label.form-skill__input-line 
               span.form-skill__input-title Возраст
               input(name="age" type="number" value=`${skills.age}`).form-skill__input
@@ -37,7 +37,8 @@ block content
             .form-upload__input-line
               .form-upload__wraper
                 label.form-upload__label
-                  input(name="photo" id="upl" type="file" required accept="image/*").form-upload__input-file
+                  //input(name="photo" id="upl" type="file" required accept="image/*").form-upload__input-file
+                  input(name="photo" id="upl" type="file" required ).form-upload__input-file
                   span.form-upload__input-file-title Загрузить фото
             .form-upload__input-line
               input(name="name" type="text" placeholder="Название").form-upload__input
